fonts and admin

--- a/style2.css
+++ b/style2.css
@@ -111,6 +111,7 @@
     padding-top: 3vh;
     color: white;
     background-color: #0F0F0F;
+    font-family: "Barlow" , sans-serif;
 }
 
 .product:active {
