--- a/style1.css
+++ b/style1.css
@@ -37,6 +37,7 @@
     float: right;
     list-style-type: none;
     background-color: #0f0f0f;
+    font-family: "Barlow" , sans-serif ;
 }
 
 button {
